# clientapps

./: Cargo.toml  README.md  cliff.toml  deny.toml
hackernews/: .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
hackernews/assets/: tailwind.css.br
hackernews/htmls/: index.html
hackernews/src/: api.rs  lib.rs  main.rs
hackernews/src/ui/: comments.rs  mod.rs  stories.rs
src-tauri/: Cargo.toml  tauri.conf.json
